# VertexCache

./: .gitignore  LICENSE  README.md  composer.json  pom.xml  run_package.bat  run_package.sh
client-sdk/cpp/: .gitignore  CMakeLists.txt  Dockerfile.linux-arm64  Dockerfile.linux-x86_64  Dockerfile.macos-intel  Dockerfile.macos-silicon  Dockerfile.win-arm64  Dockerfile.win-x86_64  README.md
client-sdk/cpp/client/: CMakeLists.txt
client-sdk/cpp/client/include/: VertexCacheSDKClient.h
client-sdk/cpp/client/src/: VertexCacheSDKClient.cpp  main.cpp
client-sdk/cpp/scripts/: build.sh  build_linux.sh  build_linux_arm64.sh  build_linux_x86_64.sh  build_mac.sh  build_mac_silicon.sh  build_mac_silicon_local.sh  build_win_arm64.sh  build_win_x86_64.sh  buld_mac_intel.sh  clean.sh  clean_install_linux.sh  clean_install_mac.sh  dist.sh  (+5 more)
client-sdk/cpp/sdk/: CMakeLists.txt
client-sdk/cpp/sdk/include/: VertexCacheSDK.h
client-sdk/cpp/sdk/src/: VertexCacheSDK.cpp
client-sdk/cpp/sdk/tests/: test_VertexCacheSDK.cpp  test_main.cpp
client-sdk/csharp/: .gitignore  README.md  VertexCache.sln  build.ps1  build.sh
client-sdk/elixir/: .gitignore  README.md  clean_install.sh  mix.exs  run.sh  test.sh
client-sdk/go/: .gitignore  clean.sh  go.mod  install.sh  run.sh  test.sh
client-sdk/java/: .gitignore  README.md  install.sh  pom.xml  run.sh  test.sh
client-sdk/kotlin/: .gitignore  README.md  build.gradle.kts  run.sh  settings.gradle.kts
client-sdk/node/: .gitignore  README.md  package.json
client-sdk/php/: .gitignore  README.md  clean.sh  composer.json  install.sh  phpunit.xml  run.sh  run_client.sh  tests.sh
client-sdk/python/: .gitignore  pyproject.toml  setup.py
client-sdk/python/client/: main.py
client-sdk/python/scripts/: clean_install.sh  run.sh  test.sh
client-sdk/python/sdk/: __init__.py  vertexcache_sdk.py
client-sdk/python/tests/: test_vertexcache_sdk.py
client-sdk/ruby/: .gitignore  Gemfile
client-sdk/rust/: Cargo.toml  install.sh  run.sh  test.sh
client-sdks/: README.md
client-sdks/crystal/: .gitignore  README.md  shard.yml  vertexcache_sdk
client-sdks/csharp/: .gitignore  README.md  VertexCacheSdk.sln
client-sdks/elixir/: .gitignore  README.md  mix.exs
client-sdks/go/: .gitignore  README.md  go.mod
client-sdks/java/: README.md
client-sdks/kotlin/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
client-sdks/nodejs/: .gitignore  .npmignore  README.md  package-lock.json  package.json
client-sdks/php/: .gitignore  README.md  composer.json  phpunit.xml
client-sdks/python/: .gitignore  README.md  pyproject.toml
client-sdks/python/sdk/: vertexcache_sdk.py
client-sdks/python/sdk/comm/: client_connector.py  message_codec.py  ssl_helper.py
client-sdks/python/sdk/model/: client_option.py
client-sdks/python/tests/: test_vertexcache_sdk.py  test_vertexcache_sdk_live.py
client-sdks/python/tests/comm/: test_client_connector.py  test_client_connector_live.py  test_client_connector_live_tls_with_asymmetric_key.py  test_client_connector_live_tls_with_symmetric_key.py  test_gcm_crypto_helper.py  test_key_parser_helper.py  test_message_codec.py  test_socket_helper.py  test_ssl_helper.py
client-sdks/python/tests/model/: test_client_option.py
client-sdks/ruby/: README.md  Rakefile  vertexcache.gemspec
client-sdks/rust/: .gitignore  Cargo.toml  README.md
client-sdks/rust/sdk/: lib.rs  vertexcache_sdk.rs
client-sdks/rust/sdk/comm/: client_connector.rs  gcm_crypto_helper.rs  key_parser_helper.rs  message_codec.rs  mod.rs  read_write_stream.rs  socket_helper.rs  ssl_helper.rs
client-sdks/rust/sdk/command/: command.rs  command_base.rs  command_type.rs  mod.rs
client-sdks/rust/sdk/command/impls/: del_command.rs  get_command.rs  get_secondary_idx_one_command.rs  get_secondary_idx_two_command.rs  mod.rs  ping_command.rs  set_command.rs
client-sdks/rust/sdk/model/: client_option.rs  command_result.rs  encryption_mode.rs  get_result.rs  mod.rs  vertex_cache_sdk_exception.rs
client-sdks/rust/sdk/vertexcache_sdk/: mod.rs
client-sdks/rust/tests/: client_connector_live_test.rs  client_connector_live_tls_with_asymmetric_key_test.rs  client_connector_live_tls_with_symmetric_key_test.rs  client_connector_test.rs  client_option_test.rs  gcm_crypto_helper_test.rs  integration_test.rs  key_parser_helper_test.rs  message_codec_test.rs  socket_helper_test.rs  ssl_helper_test.rs  vertexcache_sdk_live_test.rs
client-sdks/typescript/: .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
docs/: README.md  features.md
etc/: README.md
etc/config/: env-example-client  env-example-console  env-example-server  log4j2-vertexcache-server.xml  test_private_key.pem  test_public_key.pem  test_server_keystore.jks  test_tls_certificate.pem  test_tls_private_key.pem
etc/dist-shell/: README.md  README.txt  run_console.bat  run_server.bat
etc/dist-shell-vertex-bench/: README.md  run_vertexbench.bat  run_vertexbench.sh
etc/dist-shell-vertex-cache/: README.md  run_console.sh  run_server.sh
scripts/: clean.sh  dist.sh  init_config.sh
scripts/common/: copy-utils.sh  prompt-utils.sh
vertex-bench/: README.md  pom.xml
vertex-cache-common/: pom.xml
vertex-cache-config/: log4j2.properties  log4j2.xml  test_server_certificate.der  vertex-cache-server.properties
vertex-cache-config/console/: log4j2-vertexcache-console.xml  log4j2.properties  log4j2.xml  test_server_certificate.pem  vertex-cache-console.properties
vertex-cache-config/server/: log4j2-vertexcache-server.xml  log4j2.properties  log4j2.xml  test_server_keystore.jks  vertex-cache-server.properties
vertex-cache-console/: pom.xml
vertex-cache-dashboard/: pom.xml
vertex-cache-server/: pom.xml
(+1041 files in other folders)
