[tool.poetry]
name = "vertexcache-sdk"
version = "0.1.0"
description = "VertexCache SDK for Python"
license = "MIT"
readme = "README.md"
packages = [{include = "sdk", from = "."}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
