[package]
name = "vertexcache_sdk"
version = "1.0.0"
edition = "2021"
authors = ["Jason Lam <your-email@example.com>"]
license = "Apache-2.0"
description = "VertexCache Rust SDK"
repository = "https://github.com/vertexcache/client-sdks"

[lib]
path = "sdk/vertexcache_sdk.rs"

[dependencies]
thiserror = "1.0"
aes-gcm = "0.10"
aes = "0.8"
rand = "0.8"
base64 = "0.22"
rsa = "0.9"
hex = "0.4"

[dev-dependencies]
serial_test = "3.0.0"
