[package]
name = "vertexcache_sdk"
version = "1.0.0"
edition = "2021"
authors = ["Jason Lam"]
license = "Apache-2.0"
description = "VertexCache Rust SDK"
homepage = "https://www.vertexcache.com"
repository = "https://github.com/VertexCache/VertexCache/tree/main/client-sdks/rust"
documentation = "https://github.com/VertexCache/VertexCache/wiki/VertexCache-Client-SDK-for-Rust"
readme = "README.md"
keywords = ["vertexcache", "sdk", "cache", "client", "high-performance"]
categories = ["network-programming", "caching", "data-structures"]

[lib]
path = "sdk/lib.rs"

[dependencies]
thiserror = "1.0"
aes-gcm = "0.10"
aes = "0.8"
rand = "0.8"
base64 = "0.22"
rsa = "0.9"
sha2 = "0.10"
hex = "0.4"
native-tls = "0.2"
tempfile = "3.10"

[dev-dependencies]
serial_test = "3.0.0"
